--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,13 +14,21 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.inputprocessoutput.pockettherappist.PocketTherAPPist"
+            android:name="com.inputprocessoutput.pockettherappist.UI.ActivityList"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.inputprocessoutput.pockettherappist.PocketTherAPPist"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.inputprocessoutput.pockettherappist.UI.Encouragement"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
