--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name="com.inputprocessoutput.pockettherappist.UI.Encouragement"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="com.inputprocessoutput.pockettherappist.UI.AddNewActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
